Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-129708

Wrong aspect ratio with rotated screen using QScreenCapture and QMediaRecorder

XMLWordPrintable

    • 10cf2de18 (dev), 5cd6252a5 (dev), dccd0d521 (dev), 569d666a7 (6.9), 598177652 (6.9), f54fd95ec (6.9), 5510f7b79 (6.8), f5ba80bb6 (6.8), 223a24aaa (6.8)
    • Multimedia wk 51-2

      When recording screen captures from a rotated screen on Windows, the aspect ratio of the output video becomes wrong. This worked on 6.5.6, but does not behave as expected on 6.7 and 6.8

      See QTBUG-114558 for reproducer. Note that no crash is observed anymore.

        For Gerrit Dashboard: QTBUG-129708
        # Subject Branch Project Status CR V

            johanseg Jøger Hansegård
            johanseg Jøger Hansegård
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: